--- a/src/java/edu/swarthmore/cs/cmarsh1/maproute/view/map.html
+++ b/src/java/edu/swarthmore/cs/cmarsh1/maproute/view/map.html
@@ -1,5 +1,26 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello, world!</h1>
-    </body>
+<head>
+    <title>Java-Buddy: Google Maps</title>
+    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <style>#mapcanvas { height: 700px; width: 100%}</style>
+
+    <script>
+var map;
+function loadmap(){
+
+  var options = {
+      zoom: 16,
+      center: new google.maps.LatLng(-33, 151),
+      mapTypeId: google.maps.MapTypeId.MAP
+  }
+  map = new google.maps.Map(document.getElementById("mapcanvas"), options);
+}
+
+</script>
+
+</head>
+<body onload="loadmap()">
+<div id="mapcanvas"></div>
+</body>
 </html>
