--- a/src/java/edu/swarthmore/cs/cmarsh1/maproute/view/map.html
+++ b/src/java/edu/swarthmore/cs/cmarsh1/maproute/view/map.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Java-Buddy: Google Maps</title>
-    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <style>#mapcanvas { height: 700px; width: 100%}</style>
+  <head>
+    <title>Cam's Map</title>
+    <meta name="viewport" content="intial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+      #mapcanvas {
+        height: 100%;
+        width: 100%;
+      }
 
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="mapcanvas"></div>
     <script>
-var map;
-function loadmap(){
+        var map, infoWindow;
+        function initMap(){
+            var options = {
+                zoom: 16,
+                center: new google.maps.LatLng(40.0007, -83.07003),
+                mapTypeId: google.maps.MapTypeId.MAP
+            }
 
-  var options = {
-      zoom: 16,
-      center: new google.maps.LatLng(-33, 151),
-      mapTypeId: google.maps.MapTypeId.MAP
-  }
-  map = new google.maps.Map(document.getElementById("mapcanvas"), options);
-}
+            map = new google.maps.Map(document.getElementById("mapcanvas"), options);
+            infoWindow = new google.maps.InfoWindow;
 
-</script>
+            //Try HTML5 Geolocation
+            if(navigator.geolocation){
+              //TODO: set the position of the map to the location (maybe only if a button is pressed on the javaFX app?)
+              console.log("Geolocation is working");
 
-</head>
-<body onload="loadmap()">
-<div id="mapcanvas"></div>
-</body>
+            } else {
+              console.log("Error, geolocation service failed");
+            }
+
+
+          var pos;
+          google.maps.event.addListener(map,'click', function(event) {
+              console.log(event.latLng.lat() + ', ' + event.latLng.lng());
+              //var marker = new google.maps.Marker({position: event.latLng, map: map});
+              var circle = new google.maps.Circle({center: event.latLng, map: map, radius: 10, strokeWeight: 2})
+          });
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5_YFbGp2bLEB1zObhjeOE6IPeAVVWdqY&callback=initMap"
+    async defer></script>
+  </body>
 </html>
