added direction service with waypoints

--- a/src/java/edu/swarthmore/cs/cmarsh1/maproute/view/map.html
+++ b/src/java/edu/swarthmore/cs/cmarsh1/maproute/view/map.html
@@ -21,7 +21,9 @@
   <body>
     <div id="mapcanvas"></div>
     <script>
-        var map, infoWindow;
+        var map, infoWindow, textResponse, directionsService, directionsDisplay;
+		var points = [];
+
         function initMap(){
             var options = {
                 zoom: 16,
@@ -31,7 +33,12 @@
 
             map = new google.maps.Map(document.getElementById("mapcanvas"), options);
             infoWindow = new google.maps.InfoWindow;
+			directionsService = new google.maps.DirectionsService();
+			directionsDisplay = new google.maps.DirectionsRenderer();
 
+			directionsDisplay.setMap(map);
+
+			console.log("HERE");
             //Try HTML5 Geolocation
             if(navigator.geolocation){
               //TODO: set the position of the map to the location (maybe only if a button is pressed on the javaFX app?)
@@ -43,10 +50,40 @@
 
 
           var pos;
+		  var waypoints = [];
           google.maps.event.addListener(map,'click', function(event) {
-              console.log(event.latLng.lat() + ', ' + event.latLng.lng());
+              //console.log(event.latLng.lat() + ', ' + event.latLng.lng());
               //var marker = new google.maps.Marker({position: event.latLng, map: map});
-              var circle = new google.maps.Circle({center: event.latLng, map: map, radius: 10, strokeWeight: 2})
+              var circle = new google.maps.Circle({center: event.latLng, map: map, radius: 10, strokeWeight: 1});
+			  points.push(event.latLng);
+			  console.log(points[points.length-1].lat());
+			  //console.log(waypoints[waypoints.length - 1].lat() + ", " + waypoints[waypoints.length - 1].lng());
+
+			  //calculate waypoints
+			  points.slice(1, points.length-1).forEach(function(pt){
+				waypoints.push({
+					location: pt, stopover: false
+				});
+			  });
+			 
+			  var request = {
+				origin: points[0],
+				destination: points[points.length - 1],
+				travelMode: 'WALKING',
+				waypoints: waypoints,
+				optimizeWaypoints: false, 
+				provideRouteAlternatives: false, 
+				unitSystem: google.maps.UnitSystem.IMPERIAL
+			  };
+
+			 directionsService.route(request, function(result, status){
+				if(status=="OK"){
+					directionsDisplay.setDirections(result);
+				} 
+
+				console.log(status);
+			 });
+			
           });
         }
     </script>
